# sodap

./: .env  Anchor.toml  Dockerfile  README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/auth/login/: page.tsx
app/auth/register/: page.tsx
app/components/: AuthForm.tsx  NavBar.tsx  WalletConnect.tsx
app/components/auth/: RegisterForm.tsx
app/components/cart/: CartList.tsx
app/components/shopping/: ShoppingCart.tsx
app/components/store/: AddProduct.tsx  StoreSetup.tsx
app/contexts/: AuthContext.tsx  SodapContext.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/marketplace/: page.tsx
app/providers/: WalletProvider.tsx
app/src/app/: layout.tsx  page.tsx
app/src/contexts/: SodapContext.tsx
app/types/: sodap.ts
app/utils/: payment.ts  solana.ts  walletErrorHandler.ts
components/store/: AddProduct.tsx  ProductList.tsx  StoreSetup.tsx
programs/sodap/: Cargo.toml
programs/sodap/src/: admin.rs  cart.rs  error.rs  errors.rs  lib.rs  loyalty.rs  product.rs  store.rs  tools.rs  types.rs  user.rs  utils.rs
programs/sodap/src/instructions/: loyalty.rs  mod.rs  product.rs  store.rs  user.rs
programs/sodap/src/state/: admin.rs  error.rs  loyalty.rs  mod.rs  product.rs  store.rs  user.rs
simple-wallet-test/: package-lock.json  package.json
simple-wallet-test/pages/: _app.tsx  index.tsx
simple-wallet-test/styles/: Home.module.css
src/app/: layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/components/store/: AddProduct.tsx  (+3 more)
src/contexts/: SodapContext.tsx  WalletContext.tsx
tests/: sodap.ts
(+6 files in other folders)
