[package]
name        = "sodap"
version     = "0.1.0"
edition     = "2021"
description = "Created with Anchor"

[lib]
name        = "sodap"
crate-type  = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
solana = []
anchor-debug = []
custom-panic = []
custom-heap = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.0" }
borsh = "0.10.3"
